// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`keys() should fail 1`] = `
Object {
  "children": null,
  "message": "Keys should follow the rule: All children should be valid",
  "path": "",
}
`;

exports[`keys() should support custom message 1`] = `
Object {
  "children": null,
  "message": "Custom message",
  "path": "",
}
`;
